--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world!
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>HackathonForSocialGood.github.io</title>
+</head>
+<body>
+	Hello world! See <a href="HackathonForSocialGood.github.io/idelsohn-society-timeline">idelsohn presentation</a>.
+</body>
+</html>
