--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>HackathonForSocialGood.github.io</title>
 </head>
 <body>
-	Hello world! See <a href="HackathonForSocialGood.github.io/idelsohn-society-timeline">idelsohn presentation</a>.
+	Hello world! See <a href="idelsohn-society-timeline">idelsohn presentation</a>.
 </body>
 </html>
